    - Fix scons bootstrap process on windows 64 (wrong wininst name)

  From William Deegan:
    - Final merge from vs_revamp branch to main

    - Added definition and usage of HOST_OS, HOST_ARCH, TARGET_OS, 
      TARGET_ARCH, currently only defined/used by Visual Studio
      Compilers. This will be rolled out to other platforms/tools
      in the future.

  From Lukas Erlinghagen:

    - Have AddOption() remove variables from the list of
      seen-but-unknown variables (which are reported later).

    - An option name and aliases can now be specified as a tuple.

  From Hartmut Goebel:

    - Textfile builder.

  From Jared Grubb:

    - use "is/is not" in comparisons with None instead of "==" or "!=".

  From Jim Hunziker:

    - Avoid adding -gphobos to a command line multiple times
      when initializing use of the DMD compiler.
  
  From Jason Kenney:

    - Sugguested HOST/TARGET OS/ARCH separation.

  From Steven Knight:

    - Fix the -n option when used with VariantDir(duplicate=1)
      and the variant directory doesn't already exist.

    - Fix scanning of Unicode files for both UTF-16 endian flavors.

    - Fix a TypeError on #include of file names with Unicode characters.

    - Fix an exception if a null command-line argument is passed in.

    - Evaluate Requires() prerequisites before a Node's direct children
      (sources and dependencies).

  From Greg Noel:

    - Remove redundant __metaclass__ initializations in Environment.py.

    - Correct the documentation of text returned by sconf.Result().

    - Document that filenames with '.' as the first character are
      ignored by Glob() by default (matching UNIX glob semantics).

    - Fix SWIG testing infrastructure to work on Mac OS X.

    - Restructure a test that occasionally hung so that the test would
      detect when it was stuck and fail instead.

    - Substfile builder.

  From Gary Oberbrunner:

    - When reporting a target that SCons doesn't know how to make,